--- a/Cafe.html
+++ b/Cafe.html
@@ -268,7 +268,7 @@ Menu </a>
      </div>
    </div>
     <div class="float-right">
-     <div class="card" style="length:700px; width:400px">
+     <div class="card" style="width:400px"><!---length:700px;--->
        <h1 class="text-center">Losar Special</h2>
        <img class="card-img-top" src="ll.jpg" alt="Losar" style="width:100%">
        <div class="card-body">
