--- a/Cafe.html
+++ b/Cafe.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Split</title>
+    <title>Split test</title>
     <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css"/>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="Bootstrap/js/bootstrap.min.js"></script>
